// Bun Snapshot v1, https://bun.sh/docs/test/snapshots

exports[`password (isCI = true) renders message 1`] = `
[
  "\x1B[?25l",
  
"│
◆  foo
│  _
└
"
,
  "\x1B[999D\x1B[4A",
  "\x1B[1B",
  "\x1B[J",
  
"◇  foo
│"
,
  
"
"
,
  "\x1B[?25h",
]
`;

exports[`password (isCI = true) renders masked value 1`] = `
[
  "\x1B[?25l",
  
"│
◆  foo
│  _
└
"
,
  "\x1B[999D\x1B[4A",
  "\x1B[2B",
  "\x1B[2K\x1B[G",
  "│  ▪_",
  "\x1B[2B",
  "\x1B[999D\x1B[4A",
  "\x1B[2B",
  "\x1B[2K\x1B[G",
  "│  ▪▪_",
  "\x1B[2B",
  "\x1B[999D\x1B[4A",
  "\x1B[1B",
  "\x1B[J",
  
"◇  foo
│  ▪▪"
,
  
"
"
,
  "\x1B[?25h",
]
`;

exports[`password (isCI = true) renders custom mask 1`] = `
[
  "\x1B[?25l",
  
"│
◆  foo
│  _
└
"
,
  "\x1B[999D\x1B[4A",
  "\x1B[2B",
  "\x1B[2K\x1B[G",
  "│  *_",
  "\x1B[2B",
  "\x1B[999D\x1B[4A",
  "\x1B[2B",
  "\x1B[2K\x1B[G",
  "│  **_",
  "\x1B[2B",
  "\x1B[999D\x1B[4A",
  "\x1B[1B",
  "\x1B[J",
  
"◇  foo
│  **"
,
  
"
"
,
  "\x1B[?25h",
]
`;

exports[`password (isCI = true) renders and clears validation errors 1`] = `
[
  "\x1B[?25l",
  
"│
◆  foo
│  _
└
"
,
  "\x1B[999D\x1B[4A",
  "\x1B[2B",
  "\x1B[2K\x1B[G",
  "│  ▪_",
  "\x1B[2B",
  "\x1B[999D\x1B[4A",
  "\x1B[1B",
  "\x1B[J",
  
"▲  foo
│  ▪
└  Password must be at least 2 characters
"
,
  "\x1B[999D\x1B[4A",
  "\x1B[1B",
  "\x1B[J",
  
"◆  foo
│  ▪▪
└
"
,
  "\x1B[999D\x1B[4A",
  "\x1B[1B",
  "\x1B[J",
  
"◇  foo
│  ▪▪"
,
  
"
"
,
  "\x1B[?25h",
]
`;

exports[`password (isCI = true) renders cancelled value 1`] = `
[
  "\x1B[?25l",
  
"│
◆  foo
│  _
└
"
,
  "\x1B[999D\x1B[4A",
  "\x1B[2B",
  "\x1B[2K\x1B[G",
  "│  ▪_",
  "\x1B[2B",
  "\x1B[999D\x1B[4A",
  "\x1B[1B",
  "\x1B[J",
  
"■  foo
│  ▪
│"
,
  
"
"
,
  "\x1B[?25h",
]
`;

exports[`password (isCI = false) renders message 1`] = `
[
  "\x1B[?25l",
  
"│
◆  foo
│  _
└
"
,
  "\x1B[999D\x1B[4A",
  "\x1B[1B",
  "\x1B[J",
  
"◇  foo
│"
,
  
"
"
,
  "\x1B[?25h",
]
`;

exports[`password (isCI = false) renders masked value 1`] = `
[
  "\x1B[?25l",
  
"│
◆  foo
│  _
└
"
,
  "\x1B[999D\x1B[4A",
  "\x1B[2B",
  "\x1B[2K\x1B[G",
  "│  ▪_",
  "\x1B[2B",
  "\x1B[999D\x1B[4A",
  "\x1B[2B",
  "\x1B[2K\x1B[G",
  "│  ▪▪_",
  "\x1B[2B",
  "\x1B[999D\x1B[4A",
  "\x1B[1B",
  "\x1B[J",
  
"◇  foo
│  ▪▪"
,
  
"
"
,
  "\x1B[?25h",
]
`;

exports[`password (isCI = false) renders custom mask 1`] = `
[
  "\x1B[?25l",
  
"│
◆  foo
│  _
└
"
,
  "\x1B[999D\x1B[4A",
  "\x1B[2B",
  "\x1B[2K\x1B[G",
  "│  *_",
  "\x1B[2B",
  "\x1B[999D\x1B[4A",
  "\x1B[2B",
  "\x1B[2K\x1B[G",
  "│  **_",
  "\x1B[2B",
  "\x1B[999D\x1B[4A",
  "\x1B[1B",
  "\x1B[J",
  
"◇  foo
│  **"
,
  
"
"
,
  "\x1B[?25h",
]
`;

exports[`password (isCI = false) renders and clears validation errors 1`] = `
[
  "\x1B[?25l",
  
"│
◆  foo
│  _
└
"
,
  "\x1B[999D\x1B[4A",
  "\x1B[2B",
  "\x1B[2K\x1B[G",
  "│  ▪_",
  "\x1B[2B",
  "\x1B[999D\x1B[4A",
  "\x1B[1B",
  "\x1B[J",
  
"▲  foo
│  ▪
└  Password must be at least 2 characters
"
,
  "\x1B[999D\x1B[4A",
  "\x1B[1B",
  "\x1B[J",
  
"◆  foo
│  ▪▪
└
"
,
  "\x1B[999D\x1B[4A",
  "\x1B[1B",
  "\x1B[J",
  
"◇  foo
│  ▪▪"
,
  
"
"
,
  "\x1B[?25h",
]
`;

exports[`password (isCI = false) renders cancelled value 1`] = `
[
  "\x1B[?25l",
  
"│
◆  foo
│  _
└
"
,
  "\x1B[999D\x1B[4A",
  "\x1B[2B",
  "\x1B[2K\x1B[G",
  "│  ▪_",
  "\x1B[2B",
  "\x1B[999D\x1B[4A",
  "\x1B[1B",
  "\x1B[J",
  
"■  foo
│  ▪
│"
,
  
"
"
,
  "\x1B[?25h",
]
`;
